Fixes overflowing range pips.

--- a/src/scss/layout/_compendium-sheet.scss
+++ b/src/scss/layout/_compendium-sheet.scss
@@ -18,6 +18,11 @@
   padding-bottom: 0.25rem;
   background: rgba(246, 242, 235, 0.5);
   overflow: hidden;
+
+  /* stylelint-disable-next-line selector-class-pattern */
+  .rangeSlider {
+    width: auto;
+  }
 }
 
 .a5efc-footer {
